--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,13 +15,13 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 222 47% 11%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 222.2 47.4% 11.2%;
+    --primary: 25 95% 53%;
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -40,6 +40,7 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --transition: 0px 0px 10px 10px hsl(var(--background));
   }
   .dark {
     --background: 222.2 84% 4.9%;
